# silero-tts

./: LICENSE  README.md  config.yaml  pyproject.toml
src/: config.py  main.py  pipeline.py
src/ai/speech/to_speech/impl/: __init__.py  speech_to_speech_pipeline.py
src/ai/speech/to_text/: __init__.py  speech2text.py
src/ai/speech/to_text/impl/: __init__.py  giga_am.py
src/ai/text/to_speech/impl/: __init__.py
src/ai/text/to_text/impl/: gemini.py
src/app/: main.py
src/audio/: constants.py  recordings.py  utils.py
src/globals/: ai.py  audio.py  utils.py
src/silero_tts/: main.py  pipeline.py  tts_cli.py  utils.py
src/silero_tts/ai/speech/to_speech/: speech2speech.py
src/silero_tts/ai/speech/to_speech/impl/: speech_to_speech_pipeline.py
src/silero_tts/ai/speech/to_text/impl/: giga_am.py
src/silero_tts/ai/text/to_speech/: text2speech.py
src/silero_tts/ai/text/to_speech/impl/: silero.py
src/silero_tts/ai/text/to_text/impl/: __init__.py
src/silero_tts/audio/: constants.py  recordings.py  utils.py
src/speech2speech/: __init__.py  speech2speech.py
src/speech2speech/impl/: __init__.py  speech2speech_pipeline.py
src/speech2text/: speech2text.py
src/speech2text/impl/: __init__.py  giga_am.py
src/text2sentences/: __init__.py  text2sentences.py
src/text2sentences/impl/: __init__.py  spacy_sentence_buffer.py
src/text2speech/: __init__.py  text2speech.py
src/text2speech/impl/: __init__.py  silero_tts.py
src/text2text/: __init__.py  text2text.py  text2text_streaming.py
src/text2text/impl/: __init__.py  gemini.py  groq.py
