[project]
name = "silero-tts"
version = "0.1.0"
description = ""
authors = [{ name = "Eugene Akimov", email = "hyperflex19@gmail.com" }]
requires-python = ">=3.10,<3.12"
readme = "README.md"
dependencies = [
    "pyaudio (>=0.2.14,<0.3.0)",
    "transliterate (>=1.10.2,<2.0.0)",
    "num2words (>=0.5.14,<0.6.0)",
    "google-genai (>=1.3.0,<2.0.0)",
    "pynput (>=1.8.1,<2.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "spacy (>=3.8.4,<4.0.0)",
    "silero-vad (>=5.1.2,<6.0.0)",
    "pyyaml>=6.0.2",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/silero_tts",
]

[tool.hatch.build.targets.wheel]
include = [
    "src/silero_tts",
]

[tool.hatch.build.targets.wheel.sources]
"src/silero_tts" = "silero_tts"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
